<resources>
    <string name="app_name">LapTracks</string>
    <string name="participants">Participants</string>
    <string name="intervals">Intervals</string>
    <string name="select_intervals">Select Interval</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="distance">Distance</string>
    <string name="practice_summary">Practice Summary</string>
    <string name="back_button">Back</string>
    <string name="results">Results</string>
    <string name="complete">Complete</string>
    <string name="new_workout">New Workout</string>
    <string name="reset">Reset</string>
    <string name="students">Students</string>
    <string name="student_entry">Student Entry</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="email_chooser_title">Choose Email Title</string>
    <string name="rest">Reset</string>
    <string name="student_list">Student List</string>
    <string name="student_details">Student Details</string>
    <string name="student_edit">Student Edit</string>
    <string name="send_email">Send Email</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="no_students">Currently no students saved!</string>
    <string name="drop_down_button">Dropdown Button</string>
    <string name="drop_down_menu">Dropdown Menu</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">Signup</string>
    <string name="workout_details">Workout Details</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="team_create">Create your Team</string>
    <string name="teams">Your Teams</string>
    <string name="no_teams">No Teams available</string>
    <string name="team_details">%1$s</string>
</resources>