package com.shaunyarbrough.laptracks.data

object DataSource {
  val intervals = listOf(
    "40",
    "100",
    "200",
    "400",
    "800",
    "1600",
    "3200"
  )
}