...
}

@Preview
@Composable
fun ParticipantScreenPreview(){
  ParticipantScreen(
    students = listOf("Billy", "Bob", "Jean"),
    participants = listOf("Billy", "Bob"),
    modifier = Modifier.fillMaxHeight())
}
